Fix the alignment of the picker glass

--- a/towel_foundation/static/towel_foundation/towel_foundation.css
+++ b/towel_foundation/static/towel_foundation/towel_foundation.css
@@ -1,4 +1,4 @@
-.picker-widget > .picker-glass { float: right; line-height: 1.5; }
+.picker-widget > .picker-glass { float: right; line-height: 2; }
 .picker-widget > .picker-select { margin-right: 1.5em; }
 .picker-panel {
     height: 400px;
